# Docs

./: .gitignore  404.html  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
data_analysis_pipeline/: index.html
docs/: data_analysis_pipeline.md  index.md
docs/version_control/: branches.md  committing.md  merging.md
search/: search_index.json
version_control/branches/: index.html
version_control/committing/: index.html
version_control/merging/: index.html
