[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["Maurice Pasternak <maurice.pasternak@utoronto.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = "^9.5.34" # Documentation


[tool.pytest.ini_options]
addopts = ["-vv"]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-safe-fixes = ["F406"]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
